# mailmind

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: tests.yml
backend/: .env.example  .gitignore  Dockerfile  config.py  main.py  models.py  pyproject.toml  requirements.txt  seed.py
backend/agent/: graph.py  nodes.py  state.py  tools.py
backend/api/: auth.py  hitl.py  kb.py  logs.py  rules.py  stream.py  webhook.py
backend/services/: rag.py  resend_client.py  rules_engine.py
backend/tests/: conftest.py  test_rules.py  test_webhook.py
data/: README.md  rules.json
data/kb/: company-policies.md  invoice-procedures.md  meeting-scheduling.md  support-faq.md  troubleshooting.md
frontend/: Dockerfile  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/hitl/: page.tsx
frontend/app/kb/: page.tsx
frontend/app/metrics/: page.tsx
frontend/app/rules/: page.tsx
frontend/components/: Badge.tsx  EmailCard.tsx  HitlCard.tsx  RuleModal.tsx  Sidebar.tsx  Toast.tsx
frontend/lib/: api.ts
