[project]
name = "agentic-email-processing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres",
    "psycopg[binary]",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "requests>=2.33.1",
    "resend>=2.27.0",
    "sqlalchemy>=2.0.49",
    "svix>=1.90.0",
    "uvicorn>=0.44.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "pypdf>=6.9.2",
    "python-multipart>=0.0.24",
    "langchain-text-splitters>=1.1.1",
    "faiss-cpu>=1.13.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pgvector>=0.4.2",
]
